add new endpoints and migrations
